--- a/app/views/taskboard/show.html.erb
+++ b/app/views/taskboard/show.html.erb
@@ -24,7 +24,7 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
 	<%= stylesheet_link_tag 'taskboard' %>
 	<%= stylesheet_link_tag 'print', :media => "print" %>
 	<!-- TODO: pack jQuery and plugins for production -->
-	<%= javascript_include_tag 'lib/jquery', 'lib/jquery-ui.min', 'lib/jquery.jeditable', 'lib/jquery.colorpicker', 'lib/jquery.flot', 'lib/jquery.cookie', 'lib/showdown' %>
+	<%= javascript_include_tag 'lib/jquery', 'lib/jquery-ui.min', 'lib/jquery.jeditable', 'lib/jquery.colorpicker', 'lib/jquery.flot', 'lib/jquery.cookie', 'lib/showdown', 'lib/jquery.ui.touch-punch.min' %>
 	<script src="http://localhost:8080/application.js" type="text/javascript" charset="utf-8"></script>
 	<%= javascript_include_tag 'utils', 'taskboard' %>
 
