--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -35,7 +35,7 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
 
 <h2>New user</h2>
 
-<% form_for(@user) do |f| %>
+<%= form_for(@user) do |f| %>
   <%= f.error_messages %>
 
 <% form_for @user do |f| -%>
