--- a/app/views/taskboard/show.html.erb
+++ b/app/views/taskboard/show.html.erb
@@ -44,6 +44,11 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
 	juggernaut.subscribe(TASKBOARD.id, function(data){
     	eval(data);
   	});
+  	$(document).ready( function() {
+  		if (navigator.userAgent.match(/like Mac OS X/i)) {
+    		$('body').addClass('iphone');
+    	}
+  	});
 	</script>
 </head>
 <body>
