--- a/app/views/taskboard/show.html.erb
+++ b/app/views/taskboard/show.html.erb
@@ -20,7 +20,14 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-	<title>Taskboard</title>	
+	<title>Taskboard</title>
+	<%= stylesheet_link_tag 'bootstrap' %>
+	<style type="text/css">
+      body {
+        padding-top: 10px;
+        padding-bottom: 40px;
+      }
+    </style>
 	<%= stylesheet_link_tag 'taskboard' %>
 	<%= stylesheet_link_tag 'print', :media => "print" %>
 	<!-- TODO: pack jQuery and plugins for production -->
@@ -53,21 +60,32 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
 </head>
 <body>
 
-	<div id="header">
-	<div id="headerBar">
-		<h1><%= link_to "Taskboard", { :controller => "taskboard", :action => "index" }, :title => "Back to taskboards list", :rel => 'home' %></h1>
-		<ul id="actions">
-		<!--	<li><a class="cssChanger" href="#" title="Style">Style</a></li> -->
-			<li><a class="cardKey" href="#" title="Colours">Key</a></li>
-			<% if session[:editor] -%>
-			<li><a class="actionAddCards" href="#" title="Add some cards to this taskboard">Add cards</a></li>
-			<li><a class="actionAddColumn" href="#" title="Add a column to this taskboard">Add column</a></li>
-			<% end -%>
-			<li><a class="actionShowTagSearch" href="#" title="Filter cards by tags">Tags</a></li>
-			<li><a class="actionToggleAll" href="#" title="Zoom cards view">Zoom</a></li>
-			<li class="user"><span title="You are logged in as '<%= session[:user].username %>' user"><%= session[:user].username %></span> - <%= link_to "Logout", { :controller => "login", :action => "logout" }, :title => "Logout from Taskboard app" %></li>
-		</ul>
-	</div>
+	<div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <%= link_to "Taskboard", { :controller => "taskboard", :action => "index" }, :title => "Back to taskboards list", :rel => 'home', :class => 'brand' %>
+          <div class="nav-collapse">
+            <ul class="nav">
+              	<li><a class="cardKey" href="#" title="Colours">Key</a></li>
+              
+				<% if session[:editor] -%>
+				<li><a class="actionAddCards" href="#" title="Add some cards to this taskboard">Add cards</a></li>
+				<li><a class="actionAddColumn" href="#" title="Add a column to this taskboard">Add column</a></li>
+				<% end -%>
+				<li><a class="actionShowTagSearch" href="#" title="Filter cards by tags">Tags</a></li>
+				<li><a class="actionToggleAll" href="#" title="Zoom cards view">Zoom</a></li>
+				<li class="user"><%= link_to "Logout", { :controller => "login", :action => "logout" }, :title => "Logout from Taskboard app" %></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
 		<form id="formActions" action="#">
 			
 		
@@ -108,14 +126,14 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
 				<ul id="filterTags"></ul>
 			</fieldset>
 		</form>
-	</div>
 	
+	<div class="container">
 
 	<ol id="taskboard">
 		<li><!-- just to make it valid --></li>
 	</ol>
 
-
+	</div>
 
 </body>
 </html>
