--- a/app/assets/stylesheets/taskboard.css
+++ b/app/assets/stylesheets/taskboard.css
@@ -467,7 +467,9 @@
 	}
 	
 	#taskboard .column ol.cards > li h1{
-		font-weight: bold;
+		font-size: 16px;
+    	font-weight: bold;
+    	line-height: 16px;
 		text-decoration: underline;
 	}
 	#taskboard .column ol.cards > li h2 {
