--- a/app/views/taskboard/show.html.erb
+++ b/app/views/taskboard/show.html.erb
@@ -33,7 +33,7 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
 	<!-- TODO: pack jQuery and plugins for production -->
 	<%= javascript_include_tag 'lib/jquery', 'lib/jquery-ui.min', 'lib/jquery.jeditable', 'lib/jquery.colorpicker', 'lib/jquery.flot', 'lib/jquery.cookie', 'lib/showdown', 'lib/jquery-ui-touch-punch-min' %>
 	<script src="<%= juggernaut_js %>" type="text/javascript" charset="utf-8"></script>
-	<%= javascript_include_tag 'utils', 'taskboard' %>
+	<%= javascript_include_tag 'utils', 'taskboard', 'bootstrap.min' %>
 
 	<%= javascript_tag "$.extend(TASKBOARD, { id : '#{@taskboard_id}'});" %>
 	<%= javascript_tag "$.extend(TASKBOARD, { editor : #{session[:editor]}});" %>
@@ -78,12 +78,15 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
 				<% end -%>
 				<li><a class="actionShowTagSearch" href="#" title="Filter cards by tags">Tags</a></li>
 				<li><a class="actionToggleAll" href="#" title="Zoom cards view">Zoom</a></li>
-				<li class="user">
-					<a href="javascript:void(0);"><span title="You are logged in as '<%= session[:user].username %>' user">You are logged in as <%= session[:user].username %>,</span></a>
+				<li class="dropdown" id="menu1">
+					<a class="dropdown-toggle" data-toggle="dropdown" href="#menu1">Logged in as <%= session[:user].username %> 
+						<b class="caret"></b>
+					</a>
+					<ul class="dropdown-menu">
+					<li><%= link_to "Logout", { :controller => "login", :action => "logout" }, :title => "Logout from Taskboard app" %></li>
+					</ul>
 				</li>
-				<li class="user">
-					<%= link_to "Logout", { :controller => "login", :action => "logout" }, :title => "Logout from Taskboard app" %>
-				</li>
+				
             </ul>
           </div>
         </div>
