--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -22,9 +22,10 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<title>Taskboard: User list</title>
-	<%= stylesheet_link_tag 'admin' %>
+	<%= stylesheet_link_tag 'bootstrap' %>
 </head>
-
+</body>
+<div class="container">
 <h1>
 	<%= link_to "Taskboard", { :controller => "taskboard", :action => "index" }, :title => "Back to taskboard list", :rel => 'home', :class => "logo" %>
 </h1>
@@ -79,3 +80,5 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
 
 <%= link_to 'Details', @user %> |
 <%= link_to 'Admin', users_path %>
+</div>
+</body>
