--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -22,10 +22,11 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<title>Taskboard: User list</title>
-	<%= stylesheet_link_tag 'admin' %>
+	<%= stylesheet_link_tag 'bootstrap' %>
 </head>
 
-
+<body>
+  <div class="container">
 <h1>
 	<%= link_to "Taskboard", { :controller => "taskboard", :action => "index" }, :title => "Back to taskboard list", :rel => 'home', :class => "logo" %>
 </h1>
@@ -75,3 +76,5 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
 <%= link_to 'Back to admin', users_path %>
 
 </div>
+</div>
+</body>
