--- a/app/assets/stylesheets/taskboard.css
+++ b/app/assets/stylesheets/taskboard.css
@@ -30,8 +30,11 @@ body {
 }
 
 header h1 input[type="text"], header h1 form {
-	margin: 0px;
-	padding: 0px;
+	border: none;
+	font-size: 18px !important;
+	line-height: 18px !important;
+	margin: 0px !important;
+	padding: 0px !important;
 }
 
 #header {
@@ -80,11 +83,11 @@ header h1 input[type="text"], header h1 form {
 	}
 	
 		h1 span.title form input {
-			/*border:1px solid #CCCCCC;
-			font-family:Trebuchet,Tahoma,Arial,sans-serif;
-			font-size:1em;
-			line-height: 1em;
-			padding: 0px;*/
+			border: none;
+			font-size: 18px !important;
+			line-height: 18px !important;
+			margin: 0px !important;
+			padding: 0px !important;
 		}
 
 #actions {
@@ -185,13 +188,8 @@ span.title {
 		#taskboard .column h2 {
 			text-align: left;
 			padding-left: 10px;
-			
-		/*	margin-bottom: 5px;
-			padding-left: 5px;
 			font-size: 16px;
 			line-height: 16px;
-			font-weight: bold;
-			color: #000;*/
 		}
 
 		#taskboard .column h2:hover {
