--- a/app/views/taskboard/index.html.erb
+++ b/app/views/taskboard/index.html.erb
@@ -22,6 +22,7 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
 <head>
 	<title>Taskboards</title>
 	<%= stylesheet_link_tag 'bootstrap' %>
+  <%= javascript_include_tag 'lib/jquery', 'lib/jquery-ui.min', 'lib/rails' %>
 </head>
 
 <body>
