--- a/app/views/taskboard/_taskboard.html.erb
+++ b/app/views/taskboard/_taskboard.html.erb
@@ -20,7 +20,7 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
 	<%= link_to truncate(h(taskboard.name), :length => 35), { :controller => 'taskboard', :action => 'show', :id => taskboard }, :class => "btn", :title => "Go to '#{h(taskboard.name)}'" %>
 	<% if current_user.is_admin %>
 	
-	<span class="delete_link"><%= link_to "x", { :controller => 'taskboard', :action => 'destroy', :id => taskboard }, :class => "btn-primary btn-danger btn", :confirm => "Are you sure you REALLY, REALLY want to delete '#{h(taskboard.name)}'?\n\n This cannot be undone." %></span>
+	<span class="delete_link"><%= link_to '<i class="icon-remove" style="text-indent: -9999px;">x</i>'.html_safe, { :controller => 'taskboard', :action => 'destroy', :id => taskboard }, :class => "btn-primary btn-danger btn", :confirm => "Are you sure you REALLY, REALLY want to delete '#{h(taskboard.name)}'?\n\n This cannot be undone." %></span>
 	
 	<% end %>
 </p>
