--- a/app/views/taskboard/show.html.erb
+++ b/app/views/taskboard/show.html.erb
@@ -138,7 +138,7 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
 
 	</div>
 
-	<div class="modal" style="display: none;">
+	<div class="modal hide fade slide">
 	    <div class="modal-header">
 	    <a class="close" data-dismiss="modal">×</a>
 	    <h3>Editing card</h3>
