--- a/app/views/taskboard/show.html.erb
+++ b/app/views/taskboard/show.html.erb
@@ -97,7 +97,7 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
 				<div id="cardKeyWrapper">
 					<ol>
 					<li style="color:white;">Card key</li>
-					<li class="color F8E065" style="background-color: #F8E065;">New</li>
+					<li class="color ffffff" style="background-color: #ffffff;">New</li>
 					<li class="color BBFF44" style="background-color: #BBFF44;">In analysis</li>
 					<li class="color 53E36D" style="background-color: #53E36D;">Analysis complete</li>
 					<li class="color 23C7A1" style="background-color: #23C7A1;">Accepted</li>
