--- a/app/assets/stylesheets/listview.css
+++ b/app/assets/stylesheets/listview.css
@@ -225,7 +225,7 @@ body {
 				margin-bottom: 5px;
 				border: 1px solid transparent;
 				padding: 5px 20px 5px 5px;
-				background-color: #F8E065;
+				background-color: #fff;
 				position: relative;
 			/*	overflow: hidden;*/
 				font-size: 0.8em;
