added kiss insights

--- a/app/views/login/list_users.html.erb
+++ b/app/views/login/list_users.html.erb
@@ -25,6 +25,10 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
 		<%= stylesheet_link_tag 'login' %>
 	</head>
 	<body>
+	  
+	  <script type="text/javascript">var _kiq = _kiq || [];</script>
+    <script type="text/javascript" src="//s3.amazonaws.com/ki.js/13533/5Z_.js" async="true"></script>
+	  
 		<h1>Taskboard</h1>
 		<%= link_to "Add user", :controller => 'login', :action => 'add_user' %>
 		<ul>
