--- a/app/views/taskboard/index.html.erb
+++ b/app/views/taskboard/index.html.erb
@@ -26,6 +26,10 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
 </head>
 
 <body>
+  
+  <script type="text/javascript">var _kiq = _kiq || [];</script>
+  <script type="text/javascript" src="//s3.amazonaws.com/ki.js/13533/5Z_.js" async="true"></script>
+  
   <div class="container">
     
     <div class="navbar">
