--- a/app/views/layouts/users.html.erb
+++ b/app/views/layouts/users.html.erb
@@ -9,6 +9,10 @@
 </head>
 <body>
 
+
+  <script type="text/javascript">var _kiq = _kiq || [];</script>
+  <script type="text/javascript" src="//s3.amazonaws.com/ki.js/13533/5Z_.js" async="true"></script>
+
 <div class="container">
 
 <div class="navbar">
