--- a/app/views/login/login.html.erb
+++ b/app/views/login/login.html.erb
@@ -25,6 +25,10 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
 		<%= stylesheet_link_tag 'bootstrap' %>
 	</head>
 	<body>
+	  
+	  <script type="text/javascript">var _kiq = _kiq || [];</script>
+    <script type="text/javascript" src="//s3.amazonaws.com/ki.js/13533/5Z_.js" async="true"></script>
+	  
 	  <div class="container">
   		
       <div class="navbar">
