--- a/app/views/taskboard/show.html.erb
+++ b/app/views/taskboard/show.html.erb
@@ -53,6 +53,10 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
 	</script>
 </head>
 <body>
+  
+  <script type="text/javascript">var _kiq = _kiq || [];</script>
+  <script type="text/javascript" src="//s3.amazonaws.com/ki.js/13533/5Z_.js" async="true"></script>
+  
 	<header>
 	<div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
