--- a/app/assets/stylesheets/taskboard.css
+++ b/app/assets/stylesheets/taskboard.css
@@ -702,22 +702,25 @@ form #tagsForm {
 }
 
 #card .tags li {
-	list-style: none;
-	padding: 5px;
-	margin-right: 5px;
-	border: 1px solid #CCCCCC;
-	background-color: #EEEEEE;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
 	float: left;
+	background-color: #EEEEEE;
+    border: 1px solid #CCCCCC;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+    float: left;
+    list-style: none;
+    margin-right: 5px;
+    padding: 3px 3px 5px 5px;
 }
 
 	#card .tags li a {
-		padding-left: 5px;
-		margin-left: 3px;
-		border-left: 1px solid #000000;
-		text-decoration : none;
-		color: #777777;
+	    color: #777777;
+	    font-size: 9.75px;
+	    font-weight: bold;
+	    margin-left: 3px;
+	    padding: 1px 3px 2px;
+	    text-decoration: none;
 	}
 
 	#card .tags li a:hover {
