--- a/app/views/taskboard/show.html.erb
+++ b/app/views/taskboard/show.html.erb
@@ -75,7 +75,9 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
 				<li><a class="actionAddColumn" href="#" title="Add a column to this taskboard">Add column</a></li>
 				<% end -%>
 				<li><a class="actionShowTagSearch" href="#" title="Filter cards by tags">Tags</a></li>
+				<li><a class="actionShowUserSearch" href="#" title="Show users">Users</a></li>
 				<li><a class="actionToggleAll" href="#" title="Zoom cards view">Zoom</a></li>
+
 				<li class="dropdown" id="menu1">
 					<a class="dropdown-toggle" data-toggle="dropdown" href="#menu1">Logged in as <%= session[:user].username %> 
 						<b class="caret"></b>
@@ -129,6 +131,11 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
 				<a class='actionHideForm' href='#' title='Hide'><img src='/assets/hide_off.png' alt='Hide'/></a>
 				<label>Filter cards by tags:</label>
 				<ul id="filterTags"></ul>
+			</fieldset>
+			<fieldset id="fieldsetUsers">
+				<a class='actionHideForm' href='#' title='Hide'><img src='/assets/hide_off.png' alt='Hide'/></a>
+				<label>Filter cards by users:</label>
+				<ul id="filterUsers"></ul>
 			</fieldset>
 		</form>
 	
