--- a/app/assets/stylesheets/listview.css
+++ b/app/assets/stylesheets/listview.css
@@ -241,7 +241,7 @@ body {
 					right: 5px;
 					background-color: #f8f8f8;
 					padding: 2px;
-					-moz-border-radius: 5px 5px 5px 5px;
+					border-radius: 5px 5px 5px 5px;
       		-webkit-border-top-left-radius: 5px 5px;
       		-webkit-border-top-right-radius: 5px 5px;
       		-webkit-border-bottom-left-radius: 5px 5px;
