--- a/app/assets/stylesheets/taskboard.css
+++ b/app/assets/stylesheets/taskboard.css
@@ -246,6 +246,13 @@ span.title {
 					position: absolute;
 					top: 5px;
 					right: 5px;
+					background-color: #f8f8f8;
+					padding: 2px;
+					border-radius: 5px 5px 5px 5px;
+      		-webkit-border-top-left-radius: 5px 5px;
+      		-webkit-border-top-right-radius: 5px 5px;
+      		-webkit-border-bottom-left-radius: 5px 5px;
+      		-webkit-border-bottom-right-radius: 5px 5px;
 				}
 
 				#taskboard .column ol.cards li:hover ul.actions {
