--- a/app/assets/stylesheets/listview.css
+++ b/app/assets/stylesheets/listview.css
@@ -221,7 +221,7 @@ body {
 		}
 
 			#taskboard .column ol.cards > li {
-				min-height: 25px;
+				min-height: 40px;
 				margin-bottom: 5px;
 				border: 1px solid transparent;
 				padding: 5px 20px 5px 5px;
@@ -239,7 +239,7 @@ body {
 					position: absolute;
 					top: 5px;
 					right: 5px;
-					background-color: #f8f8f8;
+					background-color: #ddd;
 					padding: 2px;
 					border-radius: 5px 5px 5px 5px;
       		-webkit-border-top-left-radius: 5px 5px;
