--- a/app/views/taskboard/show.html.erb
+++ b/app/views/taskboard/show.html.erb
@@ -74,8 +74,7 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
 				<li><a class="actionAddCards" href="#" title="Add some cards to this taskboard">Add cards</a></li>
 				<li><a class="actionAddColumn" href="#" title="Add a column to this taskboard">Add column</a></li>
 				<% end -%>
-				<li><a class="actionShowTagSearch" href="#" title="Filter cards by tags">Tags</a></li>
-				<li><a class="actionShowUserSearch" href="#" title="Show users">Users</a></li>
+				<li><a class="actionShowFilterSearch" href="#" title="Filter cards by various fields">Filters</a></li>
 				<li><a class="actionToggleAll" href="#" title="Zoom cards view">Zoom</a></li>
 
 				<li class="dropdown" id="menu1">
@@ -131,9 +130,6 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
 				<a class='actionHideForm' href='#' title='Hide'><img src='/assets/hide_off.png' alt='Hide'/></a>
 				<label>Filter cards by tags:</label>
 				<ul id="filterTags"></ul>
-			</fieldset>
-			<fieldset id="fieldsetUsers">
-				<a class='actionHideForm' href='#' title='Hide'><img src='/assets/hide_off.png' alt='Hide'/></a>
 				<label>Filter cards by users:</label>
 				<ul id="filterUsers"></ul>
 			</fieldset>
