Fixed options for a card.

--- a/app/assets/stylesheets/taskboard.css
+++ b/app/assets/stylesheets/taskboard.css
@@ -817,6 +817,7 @@ form #tagsForm {
 }
 
 #filterTags, #filterUsers {
+	overflow: hidden;
   margin-left: 0px;
 	/*overflow: hidden;
 	clear: both;*/
