--- a/app/views/taskboard/show.html.erb
+++ b/app/views/taskboard/show.html.erb
@@ -127,7 +127,9 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
 				<input type="submit" value="Add" />
 			</fieldset>
 			<fieldset id="fieldsetTags">
+				<% if false %>
 				<a class='actionHideForm' href='#' title='Hide'><img src='/assets/hide_off.png' alt='Hide'/></a>
+				<% end %>
 				<label>Filter cards by tags:</label>
 				<ul id="filterTags"></ul>
 				<label>Filter cards by users:</label>
