Added disconnected modal box.

--- a/app/views/taskboard/show.html.erb
+++ b/app/views/taskboard/show.html.erb
@@ -151,20 +151,25 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
 		<li><!-- just to make it valid --></li>
 	</ol>
 
-
-
 	</div>
 
-	<div class="modal hide fade slide">
+	<div id="card-modal" class="modal hide fade slide">
 	    <div class="modal-header">
 	    <a class="close" data-dismiss="modal">×</a>
 	    <h3>Editing card</h3>
 	    </div>
 	    <div class="modal-body">
-	    
 	    </div>
-	    
 	</div>
+
+  <div id="disconnected-modal" class="modal hide fade slide">
+      <div class="modal-header">
+      <h3>You were disconnected from the server</h3>
+      </div>
+      <div class="modal-body">
+        Refresh the page to continue working.
+      </div>
+  </div>
 
 </body>
 </html>
