removed stripes and removed 'slide' from modal

--- a/app/views/taskboard/show.html.erb
+++ b/app/views/taskboard/show.html.erb
@@ -162,7 +162,7 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
 	    </div>
 	</div>
 
-  <div id="disconnected-modal" class="modal hide fade slide">
+  <div id="disconnected-modal" class="modal hide fade">
       <div class="modal-header">
       <h3>You were disconnected from the server</h3>
       </div>
