--- a/app/assets/stylesheets/taskboard.css
+++ b/app/assets/stylesheets/taskboard.css
@@ -226,7 +226,7 @@ span.title {
 				background-color: #fff; 
 				position: relative; 
 			/*	overflow: hidden;*/
-        background-image: url('/assets/ro_20.png');
+        /*background-image: url('/assets/ro_20.png');*/
 				-moz-border-radius: 5px;
 				-webkit-border-radius: 5px;
 			}
