--- a/app/views/taskboard/show.html.erb
+++ b/app/views/taskboard/show.html.erb
@@ -153,7 +153,7 @@ along with Taskboard. If not, see <http://www.gnu.org/licenses/>.
 
 	</div>
 
-	<div id="card-modal" class="modal hide fade slide">
+	<div id="card-modal" class="modal hide fade">
 	    <div class="modal-header">
 	    <a class="close" data-dismiss="modal">×</a>
 	    <h3>Editing card</h3>
